# infra

./: .gitignore  .terraformignore  .yamlfmt.yaml  .yamllint.yaml  CLAUDE.md  LICENSE  MIGRATION.md  README.md  aqua.yaml  renovate.json  taskfile.yaml
.claude/: settings.json
.serena/: project.yml
ansible-nuc/: Makefile  README.md  ansible.cfg  site.yaml
docs/: AGENT_MANAGEMENT.md  APPLICATION_CATALOG.md  ARCHITECTURE.md  DATA_FLOW.md  KEYCLOAK_SETUP.md  KUSTOMIZE_HELM_COMPATIBILITY.md  NAMING_CONVENTION.md  NETWORK_TOPOLOGY.md  SECRETS_MANAGEMENT.md  TASK_WORKFLOW.md
freesia/: .gitignore  README.md  migrate-pvc.md  taskfile.yaml
freesia/ansible/: .mise.toml  Makefile  pyproject.toml  site.yaml  taskfile.yaml
freesia/ansible/inventory/: hosts.yaml
freesia/ansible/plugins/lookup/: gopass.py
freesia/ansible/roles/adguardhome/files/: adguardhome.service
freesia/ansible/roles/adguardhome/handlers/: main.yaml
freesia/ansible/roles/adguardhome/tasks/: main.yaml
freesia/ansible/roles/cardinal/files/: cardinal  cardinal.service  cardinal_user
freesia/ansible/roles/cardinal/tasks/: main.yaml
freesia/ansible/roles/disable-ipv6/handlers/: main.yaml
freesia/ansible/roles/disable-ipv6/tasks/: main.yaml
freesia/ansible/roles/docker/tasks/: main.yaml
freesia/ansible/roles/golang/defaults/: main.yaml
freesia/ansible/roles/golang/tasks/: main.yaml
freesia/ansible/roles/libvirt/tasks/: main.yaml
freesia/ansible/roles/preinstall/tasks/: main.yaml
k8s/: taskfile.yaml
scripts/: add-authentik-oidc-app.sh
terraform/: .envrc  .envrc.op  README.md  (+2 more)
(+1252 files in other folders)
