[tool.poetry]
name = "infra-ansible"
version = "0.1.0"
description = ""
authors = ["suzutan <6679870+suzutan@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.13.1"
ansible = "11.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
